--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,6 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -9,27 +11,15 @@
 #nom {
     text-align: center;
     color: white;
-    font-family: "Alfa Slab One", serif;
+    font-family: "Didact Gothic", sans-serif;
     font-weight: 300px;
     font-size: 5em;
     font-style: normal;
+    margin-bottom: 20px;
 }
 
 body {
     background-color: rgb(0, 0, 0);
-}
-
-.navBar {
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.558) !important;
-    height: 60px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(3px);
-    position: fixed;
-    z-index: 999;
-    transition: all 400ms ease-in-out;
 }
 
 h4 {
@@ -52,12 +42,33 @@ p {
 }
 
 li a:hover {
-    background-color: rgb(199, 6, 44);
+    transform: scale(1.1);
+}
+
+.navBar {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.558) !important;
+    height: 100px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(3px);
+    position: fixed;
+    z-index: 999;
+    transition: all 400ms ease-in-out;
+}
+
+.menu a{
+    font-size: 18px;
 }
 
 .menu li:hover .submenu {
     visibility: visible;
-    opacity: 0.7;
+    opacity: 1;
+}
+
+.menu .submenu a{
+    color: #C8C8C8;
 }
 
 .menu>li {
@@ -68,25 +79,25 @@ li a:hover {
 .menu>li>a {
     display: block;
     padding: 15px 20px;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
+    color: #c8c8c8;
     font-weight: 600;
     text-decoration: none;
+    transition: 0.5s ease;
 }
 
-.menu li a:hover {
-    color: #0af2f6;
-    transition: all.1s;
-    text-decoration-line: underline;
+.menu>li a:hover {
+    transform: scale(1.3);
+    color: #FFF;
 }
 
 .submenu {
     position: absolute;
-    background: #f51606;
+    background: rgba(0, 0, 0, 0.558);
+    backdrop-filter: blur(20px);
     width: 120%;
     visibility: hidden;
     opacity: 1;
-    transition: 0.2s;
+    transition: 1s;
     text-decoration: none;
 }
 
@@ -111,6 +122,7 @@ li a:hover {
     font-weight: 400px;
     text-transform: uppercase;
     text-align: center;
+    margin: 100px 0px 50px 0px;
 }
 
 .tarjetas {
