--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,8 @@ li a:hover {
 
 .navBar {
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.558) !important;
+    background-color: #1111117a !important;
+   /* background-color: rgba(0, 0, 0, 0.558) !important;*/
     height: 100px;
     display: inline-flex;
     justify-content: center;
@@ -92,7 +93,7 @@ li a:hover {
 
 .submenu {
     position: absolute;
-    background: rgba(0, 0, 0, 0.558);
+    background: rgba(0, 0, 0, 0.904);
     backdrop-filter: blur(20px);
     width: 120%;
     visibility: hidden;
@@ -156,6 +157,53 @@ li a:hover {
 .peli_nom {
     text-align: center;
 }
+
+/* esstilos para Contacto*/
+.mainContacto{
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.contacto{
+    background-color: #2e2c2c;
+    margin-top: 100px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 60%;
+    border-radius: 20px;
+}
+.fornulario{
+    width: 100%;
+    
+}
+.tituloContacto{
+    margin-top: 0px;
+    width: 100%;
+    text-align: center;
+}
+
+.inputContacto{
+    width: 100%;
+    height: 30px;
+    margin: 3px 0px;
+    border-radius: 5px;
+    padding-left: 5px;
+    
+}
+.itemsFormulario{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    
+    
+    
+}
+
 
 /* Inicio carrusel css*/
 
@@ -284,6 +332,12 @@ li a:hover {
 
 .average {
     margin-left: 10px;
+}
+
+/* FOOTER */
+.footer{
+    background-color: #111111;
+    height: 50px;
 }
 
 /* Media Querys */
