--- a/styles/styles.css
+++ b/styles/styles.css
@@ -167,43 +167,109 @@ li a:hover {
 }
 
 .contacto{
-    background-color: #2e2c2c;
+    
+    background-image: linear-gradient(to right,rgba(0, 0, 0, 0.897),rgba(0, 0, 0, 0.678)), url("../img/contacto.jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
+    border: 1px solid rgb(29, 28, 28);
     margin-top: 100px;
     padding: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 60%;
+    width: 50%;
     border-radius: 20px;
+    height: auto;
+    overflow-y: scroll;
 }
-.fornulario{
-    width: 100%;
-    
-}
+
 .tituloContacto{
     margin-top: 0px;
     width: 100%;
     text-align: center;
+    color: #FFF;
+    font-size: 1.2em;
 }
 
-.inputContacto{
+.fornulario{
     width: 100%;
-    height: 30px;
-    margin: 3px 0px;
-    border-radius: 5px;
-    padding-left: 5px;
     
 }
 .itemsFormulario{
     display: flex;
     flex-direction: column;
+    margin: 0px;
+    padding: 0px;
+    
+  
+}
+.inputContacto{
+    width: 90%;
+    height: 30px;
+    margin: 3px 20px;
+    border-radius: 5px;
+    padding-left: 5px;
+    color: #000;
+  
+}
+
+.inputTextArea{
+    color: #000;
+}
+.labelForm{
+    color: #ffffff;
+}
+
+div label{
+    color: #818080;
+}
+
+.itemsSelect{
+    display: flex;
+    flex-direction:column;
+    margin: 3px 20px;
+}
+
+.botonesForm{
+    display: flex;
+    flex-direction: row;
     justify-content:center;
     align-items: center;
+    gap: 30px;
+    margin: 10px 0px;
+   
+}
+.botonForm{
+   
+    color: #ffffff;
+    font-size: 1.3em;
+    width: 100px;
+    border-radius: 7px;
+    border: none;
+   
+}
+
+.botVerde{
+    background-color: rgb(1, 139, 1);
     
-    
+}
+.botAzul{
+    background-color: rgb(5, 59, 173);
     
 }
 
+.botVerde:hover{
+    background-color: rgb(16, 158, 16);
+    
+}
+.botAzul:hover{
+    background-color: rgb(26, 84, 209);
+    
+}
+
+.noValido{
+    border: 2px red solid;
+    box-shadow:0 0 20px rgba(219, 2, 2, 0.5) !important;
+}
 
 /* Inicio carrusel css*/
 
@@ -340,6 +406,18 @@ li a:hover {
     height: 50px;
 }
 
+.imgFooter {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+}
+
+.imgFooter img {
+    width: 40px;
+    margin: 3px 2px;
+}
 /* Media Querys */
 /* Large desktop */
 @media (min-width: 1200px) {
