--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
     color: white;
     font-family: "Didact Gothic", sans-serif;
     font-weight: 300px;
-    font-size: 5em;
+    font-size: 80px;
     font-style: normal;
     margin-bottom: 20px;
 }
@@ -190,7 +190,7 @@ li a:hover {
     font-size: 1.2em;
 }
 
-.fornulario{
+.formulario{
     width: 100%;
     
 }
@@ -437,6 +437,42 @@ div label{
 @media (max-width: 767px) {
     .showtimes {
         padding-left: 5%;
+    }
+
+    .cartelera {
+        padding: 60px 0px 60px 0px;
+    }
+
+    /* Formulario  */
+    .contacto{
+        width: 100%;
+    }
+
+    /* NAVBAR */
+    .menu a{
+        font-size: 14px;
+    }
+
+    .menu>li>a {
+        display: block;
+        padding: 15px 10px;
+    }
+
+    #nom {
+        font-size: 50px;
+    }
+
+    .titleCartelera {
+        font-size: 30px;
+        margin: 50px 0px 20px 0px;
+    }
+
+    .imgFooter{
+        justify-content: center;
+    }
+
+    .navBar {
+        height: 60px;
     }
 }
 
