--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,10 +99,10 @@ li a:hover {
     visibility: hidden;
     opacity: 1;
     transition: 1s;
-    text-decoration: none;
+    list-style-type: none;
 }
 
-.submenu>dl>a {
+.submenu>li>a {
     color: white;
     text-decoration: none;
 }
@@ -139,7 +139,7 @@ li a:hover {
     box-shadow: 0px 0px 30px #000;
 }
 
-#cuadro {
+.cuadro {
     background-color: black;
     color: white;
 }
